feat: added auth api interface
